feat: wait for ticket work
